# tunes

./: .gitignore  API_SHOWCASE.md  CHANGELOG.md  Cargo.toml  GPU_API_SUMMARY.md  IMPLEMENTATION_REVIEW.md  LICENSE-APACHE  LICENSE-MIT  README.md  automation_demo.mid  bridge.mid  chorus.mid  output.mid  test_roundtrip.rs  time_sig_6_8.mid  time_sig_complex.mid  time_sig_multitrack.mid  time_sig_odd.mid  time_sig_progressive.mid  time_sig_simple.mid  time_sig_waltz.mid  time_sig_with_tempo.mid  verse.mid
benches/: README.md  cache_benchmark.rs  cache_realistic.rs  concurrent_mixing.rs  export_speed.rs  gpu_benchmark.rs  gpu_stress_test.rs  pipeline_benchmark.rs  polyphony.rs  realtime_latency.rs  sample_cache.rs  simd_effects.rs  simd_wavetable.rs  streaming_memory.rs
book/: book.toml  test_examples.sh
book/src/: SUMMARY.md  api-reference.md  comparisons.md  introduction.md
book/src/advanced/: algorithmic.md  export.md  generators.md  gpu.md  import.md  live-coding.md  midi.md  performance.md  transformations.md
book/src/concepts/: architecture.md  composition.md  engine.md  mixer.md  tempo-rhythm.md
book/src/game-audio/: bevy-integration.md  concurrent-sfx.md  dynamic-music.md  game-engine-integration.md  samples.md  spatial-audio.md
book/src/getting-started/: algorithmic.md  first-sound.md  installation.md  making-music.md  playing-samples.md
book/src/synthesis/: basics.md  effects.md  fm.md  granular.md
examples/: 808_909_complete_demo.rs  README.md  additive_synthesis_demo.rs  algorithmic_patterns.rs  arpeggios.rs  arrangement_demo.rs  automation_demo.rs  bounce_demo.rs  chaotic_sequences.rs  classical_techniques.rs  claude_composition.rs  claude_composition_algorithms.rs  composition_markers.rs  concurrent_playback_demo.rs  convolution_reverb_demo.rs  doppler_effect_demo.rs  drum_808.rs  drum_grid.rs  drum_sounds.rs  drum_variations_demo.rs  effect_presets_demo.rs  effects_showcase.rs  envelopes.rs  euclidean_rhythms.rs  every_n_demo.rs  expanded_percussion_demo.rs  expressive_techniques.rs  fastest_library_in_the_world.rs  filters.rs  flac_export.rs  generative_sequences.rs  generator_namespace.rs  gpu_export_demo.rs  harmonic_series.rs  instrument_showcase.rs  interpolated.rs  key_signatures.rs  lfo_modulation.rs  markers_demo.rs  master_feature_showcase.rs  (+66 more)
src/: actions.rs  automation.rs  chords.rs  drum_grid.rs  drums.rs  effects.rs  engine.rs  envelope.rs  error.rs  filter.rs  filter_envelope.rs  fm_synthesis.rs  granular.rs  instruments.rs  key_signature.rs  lfo.rs  lib.rs  main.rs  microtonal.rs  midi.rs  noise.rs  rhythm.rs  sample.rs  scales.rs  sequences.rs  theory.rs  track.rs  waveform.rs  wavetable.rs
src/cache/: key.rs  mod.rs  storage.rs
src/composition/: chords.rs  classical_patterns.rs  drum_grid.rs  drums.rs  effects.rs  expression.rs  generative.rs  mod.rs  musical_patterns.rs  musical_time.rs  notes.rs  ornaments.rs  patterns.rs  portamento.rs  sections.rs  synthesis.rs  timing.rs  tuplets.rs
src/composition/generative/: builders.rs  generators.rs  random_walk.rs  transforms.rs
src/composition/patterns/: classical.rs  mod.rs  musical.rs  rhythm.rs
src/composition/timing/: mod.rs  musical_time.rs  navigation.rs
src/consts/: chords.rs  mod.rs  notes.rs  scales.rs
src/gpu/: device.rs  mod.rs  synthesis.rs  synthesis.wgsl
src/instruments/: bass.rs  ethnic.rs  experimental.rs  fx.rs  guitars.rs  keys.rs  leads.rs  mod.rs  orchestral.rs  pads.rs  percussion.rs  strings.rs  synths.rs  vocal.rs
src/instruments/drums/: acoustic.rs  auxiliary.rs  cymbals.rs  effects.rs  electronic.rs  hand_percussion.rs  mod.rs
src/live_coding/: mod.rs  runner.rs  watcher.rs
src/sequences/: mod.rs
src/sequences/generative/: bakers_map.rs  bounded_walk.rs  cantor_set.rs  cellular_automaton.rs  clifford_attractor.rs  henon_map.rs  ikeda_map.rs  logistic_map.rs  lorenz_attractor.rs  lsystem.rs  markov.rs  mod.rs  perlin_noise.rs  random_walk.rs  recaman.rs  rossler_attractor.rs  sine_map.rs  tent_map.rs  thue_morse.rs  van_der_corput.rs
src/sequences/mathematical/: arithmetic.rs  catalan.rs  collatz.rs  fibonacci.rs  geometric.rs  lucas.rs  mod.rs  padovan.rs  pell.rs  pentagonal.rs  powers_of_two.rs  primes.rs  triangular.rs
src/sequences/musical/: circle_of_fifths.rs  golden_ratio.rs  golden_sections.rs  harmonic_series.rs  map_to_scale.rs  mod.rs  normalize.rs  pythagorean_tuning.rs  undertone_series.rs
src/sequences/rhythmic/: additive_meter.rs  circle_map.rs  clave.rs  euclidean.rs  golden_ratio_rhythm.rs  mod.rs  phase_shift.rs  polyrhythm.rs  shepard_tone.rs
src/synthesis/: additive.rs  automation.rs  effects.rs  filter.rs  filter_envelope.rs  fm_synthesis.rs  granular.rs  karplus_strong.rs  lfo.rs  mod.rs  noise.rs  sample.rs  simd.rs  slice.rs  spatial.rs  waveform.rs  wavetable.rs
src/synthesis/effects/: convolution.rs  delay.rs  distortion.rs  dynamics.rs  eq.rs  mod.rs  modulation.rs  reverb.rs  spatial.rs
src/templates/: jams.rs  live_template.rs  mod.rs
src/theory/: core.rs  key_signature.rs  microtonal.rs  mod.rs
src/track/: bus.rs  events.rs  export.rs  ids.rs  mixer.rs  mod.rs  track.rs
templates/: jams.rs  live_template.rs
tests/integration/: print_info_demo.rs  test_roundtrip.rs  volume_test.rs
