[package]
name = "tunes"
version = "0.16.0"
edition = "2021"
authors = ["Nicholas Manson <nicholaspmanson@gmail.com>"]
description = "A music composition, synthesis, and audio generation library"
documentation = "https://docs.rs/tunes"
homepage = "https://github.com/sqrew/tunes"
repository = "https://github.com/sqrew/tunes"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["music", "audio", "synthesis", "composition", "midi"]
categories = ["multimedia::audio", "multimedia", "algorithms"]
exclude = [
    ".github/*",
    "*.wav",
    "*.mp3",
]

# Optimize dependencies even in debug mode to prevent audio underruns
# This keeps YOUR code debuggable while making dependencies fast
[profile.dev.package."*"]
opt-level = 3

# Alternative: Custom "dev-fast" profile with full optimizations + debug symbols
# Usage: cargo run --profile dev-fast --example synthesis_demo
[profile.dev-fast]
inherits = "release"
debug = true  # Keep debug symbols for debugging

# Live coding profile: fast iteration with good enough audio performance
[profile.live]
inherits = "release"
opt-level = 2           # Slightly less optimization = much faster compile
lto = false             # Disable Link Time Optimization for faster linking
incremental = true      # Enable incremental compilation
codegen-units = 256     # More parallel compilation (faster)

# Feature flags
[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck", "futures-intrusive"]

[dependencies]
cpal = "0.15"
anyhow = "1.0"
rand = "0.9.2"
lazy_static = "1.4"
midly = "0.5"
notify = "6.1"
crossbeam = "0.8"
ringbuf = "0.4"     # Lock-free ring buffer for streaming audio
wide = "0.7"        # SIMD vectorization for DSP performance
rayon = "1.10"      # Data parallelism for multi-core performance

# GPU acceleration (optional - enable with "gpu" feature)
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }
futures-intrusive = { version = "0.5", optional = true }

# Audio I/O
hound = "3.5"       # WAV export only (writing)
flacenc = "0.5"     # FLAC export
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac"] }  # Multi-format import (MP3, OGG, FLAC, WAV, AAC)

# Benchmarks (run with: cargo run --release --bin <name>)
[[bin]]
name = "simd_sample_playback"
path = "benches/simd_sample_playback.rs"

[[bin]]
name = "simd_wavetable"
path = "benches/simd_wavetable.rs"

[[bin]]
name = "simd_effects"
path = "benches/simd_effects.rs"

[[bin]]
name = "sample_cache"
path = "benches/sample_cache.rs"

[[bin]]
name = "concurrent_mixing"
path = "benches/concurrent_mixing.rs"

[[bin]]
name = "export_speed"
path = "benches/export_speed.rs"

[[bin]]
name = "polyphony"
path = "benches/polyphony.rs"

[[bin]]
name = "streaming_memory"
path = "benches/streaming_memory.rs"

[[bin]]
name = "realtime_latency"
path = "benches/realtime_latency.rs"

[[bin]]
name = "cache_benchmark"
path = "benches/cache_benchmark.rs"

[[bin]]
name = "cache_realistic"
path = "benches/cache_realistic.rs"

[[bin]]
name = "gpu_benchmark"
path = "benches/gpu_benchmark.rs"
required-features = ["gpu"]

# GPU examples require the gpu feature to be enabled
[[example]]
name = "gpu_export_demo"
required-features = ["gpu"]

[[example]]
name = "two_line_gpu"
required-features = ["gpu"]
